--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "pouchdb-authentication": "^0.5.5",
     "c3": "~0.4.11",
     "pouchdb": "^6.1.2",
-    "bootstrap-slider": "*"
+    "bootstrap-slider": "*",
+    "uuid": "^2.0.2"
   }
 }
